[package]
name = "orx-pinned-concurrent-col"
version = "2.8.0"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A core data structure with a focus to enable high performance, possibly lock-free, concurrent collections using a PinnedVec as the underlying storage."
license = "MIT"
repository = "https://github.com/orxfun/orx-pinned-concurrent-col/"
keywords = ["concurrency", "bag", "data-structures", "atomic", "lock-free"]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-pseudo-default = { version = "1.4", default-features = false }
orx-pinned-vec = "3.10"
orx-fixed-vec = "3.10"
orx-split-vec = "3.10"

[dev-dependencies]
test-case = "3.3.1"
