[package]
name = "orx-pinned-concurrent-col"
version = "3.0.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A core data structure with a focus to enable high performance, possibly lock-free, concurrent collections using a PinnedVec as the underlying storage."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-pinned-concurrent-col/"
keywords = ["concurrency", "bag", "data-structures", "atomic", "lock-free"]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-pseudo-default = { version = "2.0.0", default-features = false }
orx-pinned-vec = { path = "../orx-pinned-vec" }
orx-fixed-vec = { path = "../orx-fixed-vec" }
orx-split-vec = { path = "../orx-split-vec" }

[dev-dependencies]
test-case = "3.3.1"
